--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
                             <p>Abstract submission (not mandatory)</p>
                         </div>
                         <div class="date" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
-                            <h3>November 29th, 2024</h3>
+                            <b style="font-size: 12pt; color: rgb(273, 179, 119); font-weight: 100"> DEADLINE EXTENDED!</b></h3>
+                            <h3><s style="color: #BEBEBE; font-size: 15pt;">December 7th, 2024</s></h3>
                             <p>Paper subission</p>
                         </div>
                         <div class="date" data-aos="fade-up" data-aos-delay="300" data-aos-duration="800">
