--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
                             <h3>November 17th, 2024</h3>
                             <p>Abstract submission (not mandatory)</p>
                         </div>
-                        <div class="date" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
+                        <div class="date next-date" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
                             <b style="font-size: 12pt; color: rgb(273, 179, 119); font-weight: 100"> DEADLINE EXTENDED!</b></h3>
-                            h3>November 17th, 2024</h3>
+                            <h3>December 7th, 2024</h3>
                             <p>Paper subission</p>
                         </div>
                         <div class="date" data-aos="fade-up" data-aos-delay="300" data-aos-duration="800">
