--- a/committee.html
+++ b/committee.html
@@ -158,6 +158,7 @@
                     <li> <strong> Imranur Rahman</strong>, North Carolina State University (USA) </li>
                     <li> <strong> Kaixuan Li</strong>, Nanyang Technological University (Singapore) </li>
                     <li> <strong> Pablo Valenzuela</strong>, University of Bern (Switzerland) </li>
+                    <li> <strong> Yang Guang</strong>, Nanjing University of Aeronautics and Astronautics (China)  </li>
                 </ul>
             </div>
         </div>
