--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -138,7 +138,7 @@
                 <ul>
                     <li><strong>Abstract submission:</strong> November 17th, 2024 (not mandatory) </li>
                     <li><strong>Paper submission (extended!):</strong> <s style="color: #BEBEBE;">November 15th, 2024</s> <strong><font color="red">December 7th, 2024</font></strong></li>
-                    <li><strong>Notification:</strong> December 20th, 2024 </li>
+                    <li><strong>Notification:</strong> <s style="color: #BEBEBE;">December 20th, 2024</s> December 22nd, 2024 </li>
                     <li><strong>Paper camera-ready:</strong> January 10th, 2025 </li>
                     <li><strong>Workshop:</strong> March 4th, 2025</li>
                   </ul>
