--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
                             <h3>December 7th, 2024</h3>
                             <p>Paper subission</p>
                         </div>
-                        <div class="date" data-aos="fade-up" data-aos-delay="300" data-aos-duration="800">
-                            <h3>December 20th, 2024</h3>
+                        <div class="date next-date" data-aos="fade-up" data-aos-delay="300" data-aos-duration="800">
+                            <h3>December 22nd, 2024</h3>
                             <p>Notification</p>
                         </div>
                         <div class="date" data-aos="fade-up" data-aos-delay="400" data-aos-duration="800">
