--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
                 <h3 data-aos="fade-up" data-aos-delay="200" data-aos-duration="800"> Keynote Speaker </h3>
                 <h4 data-aos="fade-up" data-aos-delay="300" data-aos-duration="800" style="font-weight: 200"> Prof. Emad Shihab, Concordia University (Canada) </h4>
                 <h4 data-aos="fade-up" data-aos-delay="300" data-aos-duration="800"> On the Use of LLMs in the Presence of Software Dependencies </h4>
-                <h4 data-aos="fade-up" data-aos-delay="300" data-aos-duration="800"> The use of LLMs is transforming software engineering. In many aspects of SE, using LLMs has shown tremendous improvements. One area where LLMs struggle is in the suggestion and management of software dependencies. In this talk, I will present some work that highlights the challenges of using LLMs when software dependencies are involved. I will also present some of the reasons LLMs tend to struggle with software dependencies and suggest potential solutions to address these challenges. </h4>
+                <p data-aos="fade-up" data-aos-delay="300" data-aos-duration="800">  The use of LLMs is transforming software engineering. In many aspects of SE, using LLMs has shown tremendous improvements. One area where LLMs struggle is in the suggestion and management of software dependencies. In this talk, I will present some work that highlights the challenges of using LLMs when software dependencies are involved. I will also present some of the reasons LLMs tend to struggle with software dependencies and suggest potential solutions to address these challenges.
             </div>
         </div>
 
