--- a/index.html
+++ b/index.html
@@ -123,7 +123,20 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
                 <h4 data-aos="fade-up" data-aos-delay="300" data-aos-duration="800" style="font-weight: 200"> The 3rd International Workshop on Mining Software Repositories Applications for Privacy and Security
                     will be held in Montréal, Canada, co-located with <a href="https://conf.researchr.org/home/saner-2025">SANER 2025</a>. </h4>
             </div>
-            <div class="row about-container">
+            <div class="container d-flex">
+                <div class="supporting-container supporting-info">
+                    <h3 data-aos="fade-up" data-aos-delay="200" data-aos-duration="800"> Keynote Talk </h3>
+                    <h4 data-aos="fade-up" data-aos-delay="300" data-aos-duration="800"> On the Use of LLMs in the Presence of Software Dependencies </h4>
+                    <h4 data-aos="fade-up" data-aos-delay="300" data-aos-duration="800" style="font-weight: 200; italic"> Prof. Emad Shihab, Concordia University (Canada) </h4>
+                    <p data-aos="fade-up" data-aos-delay="300" data-aos-duration="800">  The use of LLMs is transforming software engineering. In many aspects of SE, using LLMs has shown tremendous improvements. One area where LLMs struggle is in the suggestion and management of software dependencies. In this talk, I will present some work that highlights the challenges of using LLMs when software dependencies are involved. I will also present some of the reasons LLMs tend to struggle with software dependencies and suggest potential solutions to address these challenges.
+                </div>
+                <div class="supporting-container supporting-img">
+                    <div class="img_container"><img src="assets/img/sec4AI4sec.png" class="" style="height: 200px" data-aos="zoom-out" data-aos-delay="200"
+                    data-aos-duration="1000" alt="sec4ai4sec"></div>
+                </div>
+            </div>
+            
+            <!-- <div class="row about-container">
                 <h3 data-aos="fade-up" data-aos-delay="200" data-aos-duration="800"> Keynote Talk </h3>
                 <h4 data-aos="fade-up" data-aos-delay="300" data-aos-duration="800"> On the Use of LLMs in the Presence of Software Dependencies </h4>
                 <h4 data-aos="fade-up" data-aos-delay="300" data-aos-duration="800" style="font-weight: 200; italic"> Prof. Emad Shihab, Concordia University (Canada) </h4>
@@ -131,7 +144,7 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
                 <div class="supporting-container supporting-img">
                     <div class="img_container"><img src="assets/img/sec4AI4sec.png" class="" style="height: 200px" data-aos="zoom-out" data-aos-delay="200"
                     data-aos-duration="1000" alt="sec4ai4sec"></div>
-            </div>
+            </div> -->
         </div>
 
     </section>
