--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
                 <h4 data-aos="fade-up" data-aos-delay="300" data-aos-duration="800" style="font-weight: 200"> The 3rd International Workshop on Mining Software Repositories Applications for Privacy and Security
                     will be held in Montréal, Canada, co-located with <a href="https://conf.researchr.org/home/saner-2025">SANER 2025</a>. </h4>
             </div>
-            <!-- <div class="row about-container"> -->
+            <div class="row about-container">
                 <div class="supporting-container supporting-info">
                     <h3 data-aos="fade-up" data-aos-delay="200" data-aos-duration="800"> Keynote Talk </h3>
                     <h4 data-aos="fade-up" data-aos-delay="300" data-aos-duration="800"> On the Use of LLMs in the Presence of Software Dependencies </h4>
@@ -134,7 +134,7 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
                     <div class="img_container"><img src="assets/img/sec4AI4sec.png" class="" style="height: 200px" data-aos="zoom-out" data-aos-delay="200"
                     data-aos-duration="1000" alt="sec4ai4sec"></div>
                 </div>
-            <!-- </div> -->
+            </div>
             
             <!-- <div class="row about-container">
                 <h3 data-aos="fade-up" data-aos-delay="200" data-aos-duration="800"> Keynote Talk </h3>
