--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
                     <p data-aos="fade-up" data-aos-delay="300" data-aos-duration="800">  The use of LLMs is transforming software engineering. In many aspects of SE, using LLMs has shown tremendous improvements. One area where LLMs struggle is in the suggestion and management of software dependencies. In this talk, I will present some work that highlights the challenges of using LLMs when software dependencies are involved. I will also present some of the reasons LLMs tend to struggle with software dependencies and suggest potential solutions to address these challenges.
                 </div>
                 <div class="supporting-container supporting-img">
-                    <div class="img_container"><img src="assets/img/shihab" class="" style="height: 200px" data-aos="zoom-out" data-aos-delay="200"
+                    <div class="img_container"><img src="assets/img/shihab.jpg" class="" style="height: 200px" data-aos="zoom-out" data-aos-delay="200"
                     data-aos-duration="1000" alt="sec4ai4sec"></div>
                 </div>
             </div>
