--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
                 <h4 data-aos="fade-up" data-aos-delay="300" data-aos-duration="800" style="font-weight: 200"> The 3rd International Workshop on Mining Software Repositories Applications for Privacy and Security
                     will be held in Montréal, Canada, co-located with <a href="https://conf.researchr.org/home/saner-2025">SANER 2025</a>. </h4>
             </div>
-            <div class="row about-container">
+            <div class="row about-container" style"margin: 0; padding: 0">
                 <div class="supporting-container supporting-img">
-                    <div class="img_container"><img src="assets/img/shihab.jpg" class="" style="height: 250px" data-aos="zoom-out" data-aos-delay="200"
+                    <div class="img_container"><img src="assets/img/shihab.jpg" class="" style="height: 240px" data-aos="zoom-out" data-aos-delay="200"
                     data-aos-duration="1000" alt="shihab"></div>
                 </div>
                 <div class="supporting-container supporting-info">
