--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
             </div>
             <div class="row about-container">
                 <div class="supporting-container supporting-img">
-                    <div class="img_container" style="align-items: self-start"><img src="assets/img/shihab.jpg" class="" style="height: 240px" data-aos="zoom-out" data-aos-delay="200"
+                    <div style="display: flex;justify-content: left;align-items: self-start;flex-direction: column;"><img src="assets/img/shihab.jpg" class="" style="height: 240px" data-aos="zoom-out" data-aos-delay="200"
                     data-aos-duration="1000" alt="shihab"></div>
                 </div>
                 <div class="supporting-container supporting-info">
