--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
                     will be held in Montréal, Canada, co-located with <a href="https://conf.researchr.org/home/saner-2025">SANER 2025</a>. </h4>
             </div>
             <div class="row about-container">
-                <div class="supporting-container supporting-img" style="padding-left: 0;">
+                <div class="supporting-container supporting-img" style="padding-left: 0; width: 20%;">
                     <div style="display: flex;justify-content: left;align-items: self-start;flex-direction: column;"><img src="assets/img/shihab.jpg" class="" style="height: 260px" data-aos="zoom-out" data-aos-delay="200"
                     data-aos-duration="1000" alt="shihab"></div>
                 </div>
