--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
                     <div style="display: flex;justify-content: left;align-items: self-start;flex-direction: column;"><img src="assets/img/shihab.jpg" class="" style="height: 260px" data-aos="zoom-out" data-aos-delay="200"
                     data-aos-duration="1000" alt="shihab"></div>
                 </div>
-                <div class="supporting-container supporting-info">
+                <div class="supporting-container supporting-info" style="padding-left: 0; width: 80%;">
                     <h3 data-aos="fade-up" data-aos-delay="200" data-aos-duration="800"> Keynote Talk </h3>
                     <h4 data-aos="fade-up" data-aos-delay="300" data-aos-duration="800"> On the Use of LLMs in the Presence of Software Dependencies </h4>
                     <h4 data-aos="fade-up" data-aos-delay="300" data-aos-duration="800" style="font-weight: 200; italic"> Prof. Emad Shihab, Concordia University (Canada) </h4>
