--- a/accepted_papers.html
+++ b/accepted_papers.html
@@ -58,6 +58,14 @@
                 <li><a class="nav-link" href="program.html"><i class="bi bi-pencil-square"></i>Program</a></li>
                 -->
                 <li><a class="nav-link" href="committee.html"><i class="bi bi-people"></i>Committee</a></li>
+                <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-expanded="false">
+                Past Editions
+                </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li><a class="dropdown-item" href="https://msr4ps.netlify.app/msr4ps2022/" target="_blank">2022</a></li>
+                        <li><a class="dropdown-item" href="https://msr4ps.netlify.app/msr4ps2024/" target="_blank">2024</a></li>
+                    </ul>
+                </li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
