--- a/accepted_papers.html
+++ b/accepted_papers.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>SECUTE 2024</title>
+    <title>MSR4P&S 2025</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="#"></script>
@@ -46,7 +46,7 @@
     <div class="container d-flex align-items-center justify-content-between" id="navbar-container">
         <div class="d-flex">
             <a href="index.html" class="logo" style="margin-right: 20px"><img src="assets/img/secute-logo.png" alt="" class="img-fluid"></a>
-            <h1 class="logo"><a href="index.html">SECUTE 2024</a></h1>
+            <h1 class="logo"><a href="index.html">MSR4P&S 2025</a></h1>
         </div>
 
         <nav id="navbar" class="navbar">
@@ -155,7 +155,7 @@ and error incidence, we provide insights for improving SAST usability and recomm
             Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
         <div class="credits">
-            SECUTE 2024
+            MSR4P&S 2025
         </div>
     </div>
 </footer>
