--- a/accepted_papers.html
+++ b/accepted_papers.html
@@ -45,7 +45,7 @@
 <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between" id="navbar-container">
         <div class="d-flex">
-            <a href="index.html" class="logo" style="margin-right: 20px"><img src="assets/img/secute-logo.png" alt="" class="img-fluid"></a>
+            <a href="index.html" class="logo" style="margin-right: 20px"><img src="assets/img/msr4ps/msrpslogo.png" alt="" class="img-fluid"></a>
             <h1 class="logo"><a href="index.html">MSR4P&S 2025</a></h1>
         </div>
 
