--- a/accepted_papers.html
+++ b/accepted_papers.html
@@ -37,7 +37,7 @@
     <link href="assets/css/footer_style.css" rel="stylesheet">
     <link href="assets/css/accepted_style.css" rel="stylesheet">
 
-    <link rel="icon" href="assets/img/secute-logo.png">
+    <link rel="icon" href="assets/img/msr4ps/msrpslogo.png">
 </head>
 <body>
 
