--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
             </div>
         </div>
         
-/* Mobile layout */
+        <!-- Mobile layout -->
         <style>
             @media (max-width: 768px) {
             .row.about-container {
