--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
                 text-align: center; /* Center-align the image */
             }
         
-            .supporting-info {
+            <!--.supporting-info {
                 padding: 1rem; /* Add some spacing for text readability */
-            }
+            }-->
         
             .responsive-img {
                 width: 100%; /* Make the image responsive */
