--- a/accepted_papers.html
+++ b/accepted_papers.html
@@ -119,8 +119,8 @@ and error incidence, we provide insights for improving SAST usability and recomm
 
             <!----Paper 4---->
             <div class="align-items-center publication" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
-                <h4>Impact of Software Bill of Material Generation Tools and Formats on Compliance with US Government Standards</h4>
-                <p><i>Redempta Manzi Muneza, Aidan Keefe, Eric O'Donoghue and Ann Marie Reinhold</i></u></p>
+                <h4>SBOM Generation Tools and Formats Affect Compliance with US Standard</h4>
+                <p><i>Redempta Manzi Muneza, Aidan Keefe, Eric O'Donoghue, Clemente Izurieta and Ann Marie Reinhold</i></u></p>
                 <button class="btn btn-publication btn-sm" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_3" aria-expanded="false" aria-controls="collapse_4">
                     Abstract
                 </button>
